# settings

./: .gitignore  archland-settings  meson.build
.github/workflows/: aur-release.yml  build.yml
aur/: .SRCINFO  PKGBUILD
data/: org.archland.Settings.desktop
